--- a/Views/ListView.axaml
+++ b/Views/ListView.axaml
@@ -177,28 +177,22 @@
                         Foreground="#b0b9c6" />
                 </Grid>
 
-                <!--  Top Button  -->
+                <!--  Top Button Icon  -->
+                <Button
+                    Margin="0,0,55,0"
+                    HorizontalAlignment="Right"
+                    Background="Transparent"
+                    Classes="topButton">
+                    <Image Width="26" Source="/Assets/notification.png" />
+                </Button>
+
                 <Button
                     Margin="0,0,20,0"
                     HorizontalAlignment="Right"
                     Background="#dcdcdc"
                     Classes="topButton">
-                    <PathIcon
-                        HorizontalAlignment="Right"
-                        Data="{StaticResource settings_regular}"
-                        Foreground="#b0b9c6" />
-                </Button>
 
-                <Button
-                    Margin="0,0,55,0"
-                    HorizontalAlignment="Right"
-                    Background="#dcdcdc"
-                    Classes="topButton">
-
-                    <PathIcon
-                        HorizontalAlignment="Right"
-                        Data="{StaticResource settings_regular}"
-                        Foreground="#b0b9c6" />
+                    <PathIcon HorizontalAlignment="Right" Data="{StaticResource settings_regular}" />
                 </Button>
 
                 <!--  Page Title  -->
@@ -282,7 +276,7 @@
                         VerticalAlignment="Center"
                         Foreground="#b0b9c6"
                         IsHitTestVisible="False"
-                        Text="Search here ..." />
+                        Text="Filter here ..." />
 
                     <TextBox
                         Background="Transparent"
@@ -295,8 +289,11 @@
                         Data="{StaticResource search_regular}"
                         Foreground="#b0b9c6" />
                 </Grid>
-                <!--  Data Grid VIP
-                <DataGrid Grid.Row="5" ItemsSource="{Binding UserList}">
+                <!--  Data Grid VIP  -->
+                <DataGrid
+                    Grid.Row="5"
+                    Margin="0,12,0,0"
+                    ItemsSource="{Binding UserList}">
 
                     <DataGrid.Columns>
                         <DataGridCheckBoxColumn Width="auto" CanUserResize="False">
@@ -305,24 +302,78 @@
                                     <CheckBox />
                                 </DataTemplate>
                             </DataGridCheckBoxColumn.HeaderTemplate>
-
                         </DataGridCheckBoxColumn>
+
                         <DataGridTextColumn
                             Width="auto"
                             CanUserResize="False"
                             Header="#"
                             IsReadOnly="True" />
+
+                        <DataGridTemplateColumn
+                            Width="*"
+                            Header="Name"
+                            IsReadOnly="True">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal">
+                                        <Border
+                                            Width="25"
+                                            Height="25"
+                                            Margin="0,0,10,0">
+                                            <TextBlock
+                                                HorizontalAlignment="Center"
+                                                VerticalAlignment="Center"
+                                                Text="{Binding Name}" />
+                                        </Border>
+                                        <TextBlock VerticalAlignment="Center" Text="..." />
+                                    </StackPanel>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+
                         <DataGridTextColumn
                             Width="*"
-                            CanUserResize="False"
-                            Header="User"
-                            IsReadOnly="True">
-                            <DataGridTemplateColumn.CellTemplate />
-                        </DataGridTextColumn>
+                            Binding="{Binding Address}"
+                            Header="Address"
+                            IsReadOnly="True" />
+                        <DataGridTextColumn
+                            Width="*"
+                            Binding="{Binding Phone}"
+                            Header="Phone"
+                            IsReadOnly="True" />
+                        <DataGridTextColumn
+                            Width="*"
+                            Binding="{Binding Email}"
+                            Header="Email"
+                            IsReadOnly="True" />
 
+                        <DataGridTemplateColumn
+                            Width="auto"
+                            Header="Operations"
+                            IsReadOnly="True">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal">
+                                        <Button Classes="gridEditButton">
+                                            <PathIcon
+                                                Classes="gridButtonIcon"
+                                                Data="{StaticResource previous_regular}"
+                                                Foreground="#b0b9c6" />
+                                        </Button>
+                                        <Button Margin="5,0,0,0" Classes="gridRemoveButton">
+                                            <PathIcon
+                                                Classes="gridButtonIcon"
+                                                Data="{StaticResource previous_regular}"
+                                                Foreground="#b0b9c6" />
+                                        </Button>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
                     </DataGrid.Columns>
-                </DataGrid>-->
-                <!--  Data Grid  Demo  -->
+                </DataGrid>
+                <!--  Data Grid  Demo
                 <DataGrid
                     Grid.Row="5"
                     Margin="0,10"
@@ -337,10 +388,9 @@
                         <DataGridTextColumn Binding="{Binding Phone}" Header="Phone" />
                         <DataGridTextColumn Binding="{Binding Email}" Header="Email" />
                     </DataGrid.Columns>
-                </DataGrid>
+                </DataGrid>-->
 
                 <!--  Paging Button  -->
-
                 <TextBlock
                     Grid.Row="6"
                     Margin="0,10,10,10"
