--- a/Views/ListView.axaml
+++ b/Views/ListView.axaml
@@ -252,7 +252,7 @@
                     FontSize="18"
                     FontWeight="SemiBold"
                     Foreground="Black"
-                    Text="Total User: 12" />
+                    Text="{Binding Message}" />
 
                 <TextBlock
                     Grid.Row="4"
@@ -289,7 +289,8 @@
                         Data="{StaticResource search_regular}"
                         Foreground="#b0b9c6" />
                 </Grid>
-                <!--  Data Grid VIP  -->
+                <TransitioningContentControl Grid.Row="5" Content="{Binding CurrentView}>" />
+                <!--  Data Grid VIP
                 <DataGrid
                     Grid.Row="5"
                     Margin="0,12,0,0"
@@ -310,28 +311,12 @@
                             Header="#"
                             IsReadOnly="True" />
 
-                        <DataGridTemplateColumn
-                            Width="*"
-                            Header="Name"
-                            IsReadOnly="True">
-                            <DataGridTemplateColumn.CellTemplate>
-                                <DataTemplate>
-                                    <StackPanel Orientation="Horizontal">
-                                        <Border
-                                            Width="25"
-                                            Height="25"
-                                            Margin="0,0,10,0">
-                                            <TextBlock
-                                                HorizontalAlignment="Center"
-                                                VerticalAlignment="Center"
-                                                Text="{Binding Name}" />
-                                        </Border>
-                                        <TextBlock VerticalAlignment="Center" Text="..." />
-                                    </StackPanel>
-                                </DataTemplate>
-                            </DataGridTemplateColumn.CellTemplate>
-                        </DataGridTemplateColumn>
 
+                        <DataGridTextColumn
+                            Width="*"
+                            Binding="{Binding Name}"
+                            Header="Name"
+                            IsReadOnly="True" />
                         <DataGridTextColumn
                             Width="*"
                             Binding="{Binding Address}"
@@ -357,15 +342,15 @@
                                     <StackPanel Orientation="Horizontal">
                                         <Button Classes="gridEditButton">
                                             <PathIcon
+                                                Background="Transparent"
                                                 Classes="gridButtonIcon"
-                                                Data="{StaticResource previous_regular}"
-                                                Foreground="#b0b9c6" />
+                                                Data="{StaticResource previous_regular}" />
                                         </Button>
                                         <Button Margin="5,0,0,0" Classes="gridRemoveButton">
                                             <PathIcon
+                                                Background="Transparent"
                                                 Classes="gridButtonIcon"
-                                                Data="{StaticResource previous_regular}"
-                                                Foreground="#b0b9c6" />
+                                                Data="{StaticResource previous_regular}" />
                                         </Button>
                                     </StackPanel>
                                 </DataTemplate>
@@ -373,6 +358,7 @@
                         </DataGridTemplateColumn>
                     </DataGrid.Columns>
                 </DataGrid>
+				-->
                 <!--  Data Grid  Demo
                 <DataGrid
                     Grid.Row="5"
@@ -391,15 +377,7 @@
                 </DataGrid>-->
 
                 <!--  Paging Button  -->
-                <TextBlock
-                    Grid.Row="6"
-                    Margin="0,10,10,10"
-                    Padding="5"
-                    HorizontalAlignment="Left"
-                    VerticalAlignment="Center"
-                    FontSize="18"
-                    Foreground="Red"
-                    Text="{Binding Message}" />
+
 
                 <!--  Paging Button  -->
                 <Border
